# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  logic.py  logic.py.save
brain_games/games/: .brain_progression.py.swp  .prime_game.py.swp  calc_game.py  even_game.py  gcd_game.py  prime_game.py  progression_game.py
brain_games/gamescode/: even_game.py
brain_games/logic/: even_logic.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_even.py.save  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
